--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,18 @@
+attrs==23.1.0
+certifi==2023.7.22
+charset-normalizer==2.1.1
 docker==6.0.1
-requests==2.28.1
+exceptiongroup==1.1.3
 Faker==13.15.0
+idna==3.4
+iniconfig==2.0.0
+packaging==23.1
+pluggy==1.3.0
 pytest==7.2.1
 pytest-asyncio==0.20.3
+python-dateutil==2.8.2
+requests==2.28.1
+six==1.16.0
+tomli==2.0.1
+urllib3==1.26.16
+websocket-client==1.6.3
