--- a/homework_03/Dockerfile
+++ b/homework_03/Dockerfile
@@ -1,10 +1,9 @@
 #docker build . -t app
-#docker run -it app
+#docker run  -p 8000:8000 app
 FROM python:3.11.6-bookworm
 
 WORKDIR /app
 
-COPY . .
 
 RUN pip install --upgrade pip "poetry==1.6.1"
 RUN poetry config virtualenvs.create false
