--- a/homework_03/Dockerfile
+++ b/homework_03/Dockerfile
@@ -4,9 +4,11 @@ FROM python:3.11.6-bookworm
 
 WORKDIR /app
 
+COPY . .
 
 RUN pip install --upgrade pip "poetry==1.6.1"
 RUN poetry config virtualenvs.create false
+
 
 RUN poetry install
 
