--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,45 @@
+aiohttp==3.9.0
+aiosignal==1.3.1
+alembic==1.12.1
+annotated-types==0.6.0
+anyio==3.7.1
+async-timeout==4.0.3
+asyncpg==0.29.0
 attrs==23.1.0
+black==23.11.0
 certifi==2023.7.22
 charset-normalizer==2.1.1
+click==8.1.7
 docker==6.0.1
 exceptiongroup==1.1.3
 Faker==13.15.0
+fastapi==0.103.2
+frozenlist==1.4.0
+greenlet==3.0.1
+h11==0.14.0
 idna==3.4
 iniconfig==2.0.0
+Mako==1.3.0
+MarkupSafe==2.1.3
+multidict==6.0.4
+mypy-extensions==1.0.0
 packaging==23.1
+pathspec==0.11.2
+platformdirs==4.0.0
 pluggy==1.3.0
+pydantic==2.4.2
+pydantic_core==2.10.1
 pytest==7.2.1
 pytest-asyncio==0.20.3
 python-dateutil==2.8.2
 requests==2.28.1
 six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.23
+starlette==0.27.0
 tomli==2.0.1
+typing_extensions==4.8.0
 urllib3==1.26.16
+uvicorn==0.23.2
 websocket-client==1.6.3
+yarl==1.9.3
