--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ async-timeout==4.0.3
 asyncpg==0.29.0
 attrs==23.1.0
 black==23.11.0
+blinker==1.7.0
 certifi==2023.7.22
 charset-normalizer==2.1.1
 click==8.1.7
@@ -14,11 +15,14 @@ docker==6.0.1
 exceptiongroup==1.1.3
 Faker==13.15.0
 fastapi==0.103.2
+Flask==3.0.0
 frozenlist==1.4.0
 greenlet==3.0.1
 h11==0.14.0
 idna==3.4
 iniconfig==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
 Mako==1.3.0
 MarkupSafe==2.1.3
 multidict==6.0.4
@@ -42,4 +46,5 @@ typing_extensions==4.8.0
 urllib3==1.26.16
 uvicorn==0.23.2
 websocket-client==1.6.3
+Werkzeug==3.0.1
 yarl==1.9.3
