--- a/homework_07/storaging/environment.example
+++ b/homework_07/storaging/environment.example
@@ -7,7 +7,7 @@ HOST_NAME=localhost
 
 #   PostgreSQL
 #==========================================
-POSTGRES_DB=mancore_db
+POSTGRES_DB=storaging_db
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=password
 PGDATA=/home/postgresql/data
