--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiosignal==1.3.1
 alembic==1.12.1
 annotated-types==0.6.0
 anyio==3.7.1
+asgiref==3.7.2
 async-timeout==4.0.3
 asyncpg==0.29.0
 attrs==23.1.0
@@ -11,11 +12,18 @@ blinker==1.7.0
 certifi==2023.7.22
 charset-normalizer==2.1.1
 click==8.1.7
+dj-config-url==0.1.1
+Django==5.0
+django-environ==0.11.2
+djangorestframework==3.14.0
 docker==6.0.1
+environ==1.0
 exceptiongroup==1.1.3
 Faker==13.15.0
 fastapi==0.103.2
 Flask==3.0.0
+Flask-Migrate==4.0.5
+Flask-SQLAlchemy==3.1.1
 frozenlist==1.4.0
 greenlet==3.0.1
 h11==0.14.0
@@ -28,18 +36,22 @@ MarkupSafe==2.1.3
 multidict==6.0.4
 mypy-extensions==1.0.0
 packaging==23.1
+path==16.9.0
 pathspec==0.11.2
 platformdirs==4.0.0
 pluggy==1.3.0
+psycopg2-binary==2.9.9
 pydantic==2.4.2
 pydantic_core==2.10.1
 pytest==7.2.1
 pytest-asyncio==0.20.3
 python-dateutil==2.8.2
+pytz==2023.3.post1
 requests==2.28.1
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.23
+sqlparse==0.4.4
 starlette==0.27.0
 tomli==2.0.1
 typing_extensions==4.8.0
