--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -2,9 +2,9 @@ name: Pytest_homework_10
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "homework_10" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "homework_10" ]
 
 permissions:
   contents: read
@@ -26,4 +26,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
-        pytest homework_08/storaging/warehouses/tests
+        pytest
