--- a/.github/workflows/pytest_homework_10.yml
+++ b/.github/workflows/pytest_homework_10.yml
@@ -23,7 +23,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        ./manage.py migrate --noinput
     - name: Test with pytest
       run: |
         pytest
