--- a/.github/workflows/pytest_homework_10.yml
+++ b/.github/workflows/pytest_homework_10.yml
@@ -28,4 +28,4 @@ jobs:
         ./manage.py migrate --noinput
     - name: Test with pytest
       run: |
-        pytest
+        docker-compose run --rm  backend pytest
