--- a/.github/workflows/pytest_homework_10.yml
+++ b/.github/workflows/pytest_homework_10.yml
@@ -14,6 +14,24 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres:13.1
+        # Provide the password for postgres
+        env:
+          POSTGRES_PASSWORD: password
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5432:5432
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.11
@@ -29,3 +47,5 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+      env:
+        SQLALCHEMY_PG_CONN_URI: pgsql://admin:password@postgres/storaging_db
