--- a/.github/workflows/pytest_homework_10.yml
+++ b/.github/workflows/pytest_homework_10.yml
@@ -45,4 +45,4 @@ jobs:
       run: |
         pytest
       env:
-        SQLALCHEMY_PG_CONN_URI: pgsql://admin:password@postgres:5432/storaging_db
+        SQLALCHEMY_PG_CONN_URI: pgsql://admin:password@localhost:5432/storaging_db
